<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/wall_title"/>
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ContentText"
        android:hint="@string/wall_name_hint"
        android:layout_marginTop="10dp"/>
    
    <EditText
        android:id="@+id/et_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ContentText"
        android:lines="3"
        android:gravity="top|left"
        android:hint="@string/wall_content_hint"
        android:text="@string/wall_content"
        android:layout_marginTop="5dp"/>
    
    <Button
        android:id="@+id/btn_send"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        style="@style/ContentText"
        android:text="@string/wall_send"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/tv_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ContentText"
        android:visibility="invisible"
        android:text="@string/wall_tip"
        android:layout_marginTop="10dp"/>
</LinearLayout>
